--- a/SON_Blog2/nginx/nginx.conf
+++ b/SON_Blog2/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
 
     server_name  sonblogweb;
     location / {
-        proxy_pass   "http://172.20.10.5:5000";
+        proxy_pass   "http://sonblogapp:5000";
     }
 
 }
