--- a/SON_Blog2/sonblog/Dockerfile
+++ b/SON_Blog2/sonblog/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7
-WORKDIR /home/sonblog
-COPY requirements.txt .
+COPY requirements.txt /home/requirements.txt
 RUN pip3 install --upgrade pip
-RUN pip3 install -r requirements.txt
-ADD . /home/sonblog/
-CMD 'python /home/sonblog/run.py'
+RUN pip3 install -r /home/requirements.txt
+COPY . /home
+EXPOSE 5000
+ENTRYPOINT ["python", "/home/run.py" ]
